--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,31 +25,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#https://www.ons.gov.uk/economy/nationalaccounts/balanceofpayments/datasets/uktradecountrybycommodityexports\n",
     "url = \"https://www.ons.gov.uk/file?uri=/economy/nationalaccounts/balanceofpayments/datasets/uktradecountrybycommodityexports/current/countrybycommodityexports.zip\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "r = requests.get(url) \n",
     "\n",
-    "brexit_Jan21 = zf.ZipFile(io.BytesIO(r.content))\n",
+    "brexit_FEB21 = zf.ZipFile(io.BytesIO(r.content))\n",
     "\n",
-    "brexit_Jan21.extractall(\".\\\\data\")\n",
+    "brexit_FEB21.extractall(\".\\\\data\")\n",
     "\n",
-    "filename = brexit_Jan21.namelist()"
+    "filename = brexit_FEB21.namelist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,6 @@
        "      <th>1997JUN</th>\n",
        "      <th>1997JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2020APR</th>\n",
        "      <th>2020MAY</th>\n",
        "      <th>2020JUN</th>\n",
        "      <th>2020JUL</th>\n",
@@ -103,6 +103,7 @@
        "      <th>2020NOV</th>\n",
        "      <th>2020DEC</th>\n",
        "      <th>2021JAN</th>\n",
+       "      <th>2021FEB</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -123,11 +124,11 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -143,16 +144,16 @@
        "      <td>4.90</td>\n",
        "      <td>3.80</td>\n",
        "      <td>...</td>\n",
-       "      <td>18.86</td>\n",
-       "      <td>14.99</td>\n",
-       "      <td>13.71</td>\n",
-       "      <td>15.44</td>\n",
-       "      <td>16.95</td>\n",
-       "      <td>19.71</td>\n",
-       "      <td>21.88</td>\n",
-       "      <td>19.08</td>\n",
-       "      <td>22.68</td>\n",
+       "      <td>14.92</td>\n",
+       "      <td>13.60</td>\n",
+       "      <td>15.49</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>19.74</td>\n",
+       "      <td>22.05</td>\n",
+       "      <td>19.19</td>\n",
+       "      <td>22.89</td>\n",
        "      <td>15.35</td>\n",
+       "      <td>18.39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -167,16 +168,16 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.14</td>\n",
-       "      <td>0.16</td>\n",
+       "      <td>0.15</td>\n",
        "      <td>0.08</td>\n",
        "      <td>0.03</td>\n",
        "      <td>0.11</td>\n",
        "      <td>0.12</td>\n",
        "      <td>0.06</td>\n",
-       "      <td>0.45</td>\n",
+       "      <td>0.44</td>\n",
        "      <td>0.13</td>\n",
+       "      <td>0.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -191,16 +192,16 @@
        "      <td>0.23</td>\n",
        "      <td>0.32</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.02</td>\n",
        "      <td>0.21</td>\n",
        "      <td>0.06</td>\n",
        "      <td>0.14</td>\n",
        "      <td>0.18</td>\n",
        "      <td>0.19</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>0.27</td>\n",
        "      <td>0.23</td>\n",
-       "      <td>0.30</td>\n",
+       "      <td>0.29</td>\n",
        "      <td>0.23</td>\n",
+       "      <td>0.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -228,7 +229,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 292 columns</p>\n",
+       "<p>5 rows × 293 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -239,31 +240,31 @@
        "3  0 Food & live animals     AG Antigua & Barbuda  EX Exports     0.17   \n",
        "4  0 Food & live animals              AI Anguilla  EX Exports     0.00   \n",
        "\n",
-       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020APR  \\\n",
+       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020MAY  \\\n",
        "0     0.04     0.07     0.01     0.04     0.04     0.03  ...     0.00   \n",
-       "1     3.93     4.26     4.61     3.77     4.90     3.80  ...    18.86   \n",
-       "2     0.00     0.00     0.00     0.01     0.00     0.00  ...     0.00   \n",
-       "3     0.13     0.22     0.27     0.19     0.23     0.32  ...     0.02   \n",
+       "1     3.93     4.26     4.61     3.77     4.90     3.80  ...    14.92   \n",
+       "2     0.00     0.00     0.00     0.01     0.00     0.00  ...     0.14   \n",
+       "3     0.13     0.22     0.27     0.19     0.23     0.32  ...     0.21   \n",
        "4     0.00     0.01     0.03     0.00     0.00     0.00  ...     0.00   \n",
        "\n",
-       "   2020MAY  2020JUN  2020JUL  2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  \\\n",
-       "0     0.00     0.00     0.00     0.00     0.01     0.00     0.00     0.01   \n",
-       "1    14.99    13.71    15.44    16.95    19.71    21.88    19.08    22.68   \n",
-       "2     0.14     0.16     0.08     0.03     0.11     0.12     0.06     0.45   \n",
-       "3     0.21     0.06     0.14     0.18     0.19     0.25     0.23     0.30   \n",
+       "   2020JUN  2020JUL  2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  \\\n",
+       "0     0.00     0.00     0.00     0.01     0.00     0.00     0.01     0.00   \n",
+       "1    13.60    15.49    17.02    19.74    22.05    19.19    22.89    15.35   \n",
+       "2     0.15     0.08     0.03     0.11     0.12     0.06     0.44     0.13   \n",
+       "3     0.06     0.14     0.18     0.19     0.27     0.23     0.29     0.23   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "\n",
-       "   2021JAN  \n",
+       "   2021FEB  \n",
        "0     0.00  \n",
-       "1    15.35  \n",
-       "2     0.13  \n",
-       "3     0.23  \n",
+       "1    18.39  \n",
+       "2     0.25  \n",
+       "3     0.28  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 292 columns]"
+       "[5 rows x 293 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +365,7 @@
        " 'Poland']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +465,7 @@
        "Canada               0 Food & live animals 1997-01-01    8180000.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -534,48 +535,48 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Australia</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">0 Food &amp; live animals</th>\n",
-       "      <th>1997-01-01</th>\n",
-       "      <td>4950000.0</td>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Total</th>\n",
+       "      <th>2020-10-01</th>\n",
+       "      <td>2.814300e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1997-02-01</th>\n",
-       "      <td>4870000.0</td>\n",
+       "      <th>2020-11-01</th>\n",
+       "      <td>2.813900e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1997-03-01</th>\n",
-       "      <td>3800000.0</td>\n",
+       "      <th>2020-12-01</th>\n",
+       "      <td>2.786400e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1997-04-01</th>\n",
-       "      <td>4630000.0</td>\n",
+       "      <th>2021-01-01</th>\n",
+       "      <td>1.995700e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1997-05-01</th>\n",
-       "      <td>4230000.0</td>\n",
+       "      <th>2021-02-01</th>\n",
+       "      <td>2.392800e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              exports\n",
-       "COUNTRY   COMMODITY             time                 \n",
-       "Australia 0 Food & live animals 1997-01-01  4950000.0\n",
-       "                                1997-02-01  4870000.0\n",
-       "                                1997-03-01  3800000.0\n",
-       "                                1997-04-01  4630000.0\n",
-       "                                1997-05-01  4230000.0"
+       "                                       exports\n",
+       "COUNTRY     COMMODITY time                    \n",
+       "Whole world Total     2020-10-01  2.814300e+10\n",
+       "                      2020-11-01  2.813900e+10\n",
+       "                      2020-12-01  2.786400e+10\n",
+       "                      2021-01-01  1.995700e+10\n",
+       "                      2021-02-01  2.392800e+10"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "foo.head()"
+    "foo.tail()"
    ]
   },
   {
