--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -94,7 +94,6 @@
        "      <th>1997JUN</th>\n",
        "      <th>1997JUL</th>\n",
        "      <th>...</th>\n",
-       "      <th>2020MAY</th>\n",
        "      <th>2020JUN</th>\n",
        "      <th>2020JUL</th>\n",
        "      <th>2020AUG</th>\n",
@@ -104,6 +103,7 @@
        "      <th>2020DEC</th>\n",
        "      <th>2021JAN</th>\n",
        "      <th>2021FEB</th>\n",
+       "      <th>2021MAR</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -123,11 +123,11 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0.01</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
@@ -144,7 +144,6 @@
        "      <td>4.90</td>\n",
        "      <td>3.80</td>\n",
        "      <td>...</td>\n",
-       "      <td>14.92</td>\n",
        "      <td>13.60</td>\n",
        "      <td>15.49</td>\n",
        "      <td>17.02</td>\n",
@@ -152,8 +151,9 @@
        "      <td>22.05</td>\n",
        "      <td>19.19</td>\n",
        "      <td>22.89</td>\n",
-       "      <td>15.35</td>\n",
-       "      <td>18.39</td>\n",
+       "      <td>15.34</td>\n",
+       "      <td>18.40</td>\n",
+       "      <td>21.87</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -168,7 +168,6 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.14</td>\n",
        "      <td>0.15</td>\n",
        "      <td>0.08</td>\n",
        "      <td>0.03</td>\n",
@@ -178,6 +177,7 @@
        "      <td>0.44</td>\n",
        "      <td>0.13</td>\n",
        "      <td>0.25</td>\n",
+       "      <td>0.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -192,7 +192,6 @@
        "      <td>0.23</td>\n",
        "      <td>0.32</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.21</td>\n",
        "      <td>0.06</td>\n",
        "      <td>0.14</td>\n",
        "      <td>0.18</td>\n",
@@ -201,7 +200,8 @@
        "      <td>0.23</td>\n",
        "      <td>0.29</td>\n",
        "      <td>0.23</td>\n",
-       "      <td>0.28</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>0.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -229,7 +229,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 293 columns</p>\n",
+       "<p>5 rows × 294 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -240,28 +240,28 @@
        "3  0 Food & live animals     AG Antigua & Barbuda  EX Exports     0.17   \n",
        "4  0 Food & live animals              AI Anguilla  EX Exports     0.00   \n",
        "\n",
-       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020MAY  \\\n",
+       "   1997FEB  1997MAR  1997APR  1997MAY  1997JUN  1997JUL  ...  2020JUN  \\\n",
        "0     0.04     0.07     0.01     0.04     0.04     0.03  ...     0.00   \n",
-       "1     3.93     4.26     4.61     3.77     4.90     3.80  ...    14.92   \n",
-       "2     0.00     0.00     0.00     0.01     0.00     0.00  ...     0.14   \n",
-       "3     0.13     0.22     0.27     0.19     0.23     0.32  ...     0.21   \n",
+       "1     3.93     4.26     4.61     3.77     4.90     3.80  ...    13.60   \n",
+       "2     0.00     0.00     0.00     0.01     0.00     0.00  ...     0.15   \n",
+       "3     0.13     0.22     0.27     0.19     0.23     0.32  ...     0.06   \n",
        "4     0.00     0.01     0.03     0.00     0.00     0.00  ...     0.00   \n",
        "\n",
-       "   2020JUN  2020JUL  2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  \\\n",
-       "0     0.00     0.00     0.00     0.01     0.00     0.00     0.01     0.00   \n",
-       "1    13.60    15.49    17.02    19.74    22.05    19.19    22.89    15.35   \n",
-       "2     0.15     0.08     0.03     0.11     0.12     0.06     0.44     0.13   \n",
-       "3     0.06     0.14     0.18     0.19     0.27     0.23     0.29     0.23   \n",
+       "   2020JUL  2020AUG  2020SEP  2020OCT  2020NOV  2020DEC  2021JAN  2021FEB  \\\n",
+       "0     0.00     0.00     0.01     0.00     0.00     0.01     0.00     0.00   \n",
+       "1    15.49    17.02    19.74    22.05    19.19    22.89    15.34    18.40   \n",
+       "2     0.08     0.03     0.11     0.12     0.06     0.44     0.13     0.25   \n",
+       "3     0.14     0.18     0.19     0.27     0.23     0.29     0.23     0.27   \n",
        "4     0.00     0.00     0.00     0.00     0.00     0.00     0.00     0.00   \n",
        "\n",
-       "   2021FEB  \n",
+       "   2021MAR  \n",
        "0     0.00  \n",
-       "1    18.39  \n",
-       "2     0.25  \n",
-       "3     0.28  \n",
+       "1    21.87  \n",
+       "2     0.03  \n",
+       "3     0.30  \n",
        "4     0.00  \n",
        "\n",
-       "[5 rows x 293 columns]"
+       "[5 rows x 294 columns]"
       ]
      },
      "execution_count": 5,
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -537,10 +537,6 @@
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">Total</th>\n",
-       "      <th>2020-10-01</th>\n",
-       "      <td>2.814300e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2020-11-01</th>\n",
        "      <td>2.813900e+10</td>\n",
        "    </tr>\n",
@@ -550,11 +546,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-01-01</th>\n",
-       "      <td>1.995700e+10</td>\n",
+       "      <td>2.016500e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-02-01</th>\n",
-       "      <td>2.392800e+10</td>\n",
+       "      <td>2.396400e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01</th>\n",
+       "      <td>2.900800e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -563,14 +563,14 @@
       "text/plain": [
        "                                       exports\n",
        "COUNTRY     COMMODITY time                    \n",
-       "Whole world Total     2020-10-01  2.814300e+10\n",
-       "                      2020-11-01  2.813900e+10\n",
+       "Whole world Total     2020-11-01  2.813900e+10\n",
        "                      2020-12-01  2.786400e+10\n",
-       "                      2021-01-01  1.995700e+10\n",
-       "                      2021-02-01  2.392800e+10"
+       "                      2021-01-01  2.016500e+10\n",
+       "                      2021-02-01  2.396400e+10\n",
+       "                      2021-03-01  2.900800e+10"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
