total now excludes metals

--- a/brexit-data.ipynb
+++ b/brexit-data.ipynb
@@ -334,49 +334,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COMMODITY</th>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>time</th>\n",
+       "      <th>exports</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0 Food &amp; live animals</td>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>1997-01-01</td>\n",
+       "      <td>4.180000e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0 Food &amp; live animals</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>1997-01-01</td>\n",
+       "      <td>4.950000e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0 Food &amp; live animals</td>\n",
+       "      <td>Total EU(28)</td>\n",
+       "      <td>1997-01-01</td>\n",
+       "      <td>3.850200e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0 Food &amp; live animals</td>\n",
+       "      <td>Belgium</td>\n",
+       "      <td>1997-01-01</td>\n",
+       "      <td>2.255000e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>0 Food &amp; live animals</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>1997-01-01</td>\n",
+       "      <td>8.180000e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8620822</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>4.180000e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8620823</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>Singapore</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>3.120000e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8620849</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>4.600000e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8620857</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>4.535000e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8620867</th>\n",
+       "      <td>Total</td>\n",
+       "      <td>Whole world</td>\n",
+       "      <td>2021-03-01</td>\n",
+       "      <td>2.900800e+10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>836625 rows × 4 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "['Whole world',\n",
-       " 'Total EU(28)',\n",
-       " 'Extra EU 28 (Rest of World)',\n",
-       " 'United States inc Puerto Rico',\n",
-       " 'Germany',\n",
-       " 'France',\n",
-       " 'Netherlands',\n",
-       " 'Ireland',\n",
-       " 'Belgium',\n",
-       " 'Spain',\n",
-       " 'Italy',\n",
-       " 'China',\n",
-       " 'Switzerland',\n",
-       " 'Sweden',\n",
-       " 'Hong Kong',\n",
-       " 'Japan',\n",
-       " 'United Arab Emirates',\n",
-       " 'Canada',\n",
-       " 'India',\n",
-       " 'Singapore',\n",
-       " 'Australia',\n",
-       " 'Turkey',\n",
-       " 'Poland']"
+       "                     COMMODITY               COUNTRY       time       exports\n",
+       "1        0 Food & live animals  United Arab Emirates 1997-01-01  4.180000e+06\n",
+       "12       0 Food & live animals             Australia 1997-01-01  4.950000e+06\n",
+       "15       0 Food & live animals          Total EU(28) 1997-01-01  3.850200e+08\n",
+       "19       0 Food & live animals               Belgium 1997-01-01  2.255000e+07\n",
+       "36       0 Food & live animals                Canada 1997-01-01  8.180000e+06\n",
+       "...                        ...                   ...        ...           ...\n",
+       "8620822                  Total                Sweden 2021-03-01  4.180000e+08\n",
+       "8620823                  Total             Singapore 2021-03-01  3.120000e+08\n",
+       "8620849                  Total                Turkey 2021-03-01  4.600000e+08\n",
+       "8620857                  Total         United States 2021-03-01  4.535000e+09\n",
+       "8620867                  Total           Whole world 2021-03-01  2.900800e+10\n",
+       "\n",
+       "[836625 rows x 4 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "topcntry"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grp = df.groupby([\"COUNTRY\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ex_metal_total(df):\n",
+    "        \n",
+    "    if not (df[df[\"COMMODITY\"] == \"9 Unspecified goods\"].empty):\n",
+    "                \n",
+    "        foo = pd.DataFrame([])\n",
+    "\n",
+    "        fooall = df[df[\"COMMODITY\"] == \"Total\"].set_index([\"time\"])[\"exports\"] \n",
+    "        \n",
+    "        foobar = df[df[\"COMMODITY\"] == \"9 Unspecified goods\"].set_index([\"time\"])[\"exports\"]\n",
+    "\n",
+    "        foo[\"exports\"] = fooall - foobar\n",
+    "    # Grab the total and then sbutract off the unspecified goods\n",
+    "    \n",
+    "        foo[\"COUNTRY\"] = df.COUNTRY.unique()[0]\n",
+    "    \n",
+    "        #print(df.COUNTRY.unique())\n",
+    "    \n",
+    "        foo[\"COMMODITY\"] = \"Total (ex. metals)\"\n",
+    "        \n",
+    "        foo.reset_index(inplace = True)\n",
+    "        \n",
+    "        foo[df.columns]\n",
+    "        \n",
+    "        df = df.append(foo)\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = grp.apply(ex_metal_total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop([\"COUNTRY\"], axis = 1, inplace = True)\n",
+    "\n",
+    "df.reset_index(inplace = True)\n",
+    "\n",
+    "df.drop([\"level_1\"], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -422,50 +586,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>United Arab Emirates</th>\n",
-       "      <th>0 Food &amp; live animals</th>\n",
-       "      <th>1997-01-01</th>\n",
-       "      <td>4180000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Australia</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Australia</th>\n",
        "      <th>0 Food &amp; live animals</th>\n",
        "      <th>1997-01-01</th>\n",
        "      <td>4950000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Total EU(28)</th>\n",
-       "      <th>0 Food &amp; live animals</th>\n",
+       "      <th>00 Live animals</th>\n",
        "      <th>1997-01-01</th>\n",
-       "      <td>385020000.0</td>\n",
+       "      <td>1130000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Belgium</th>\n",
-       "      <th>0 Food &amp; live animals</th>\n",
+       "      <th>01 Meat &amp; meat preparations</th>\n",
        "      <th>1997-01-01</th>\n",
-       "      <td>22550000.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Canada</th>\n",
-       "      <th>0 Food &amp; live animals</th>\n",
+       "      <th>02 Dairy products &amp; eggs</th>\n",
        "      <th>1997-01-01</th>\n",
-       "      <td>8180000.0</td>\n",
+       "      <td>140000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>03 Fish &amp; shellfish</th>\n",
+       "      <th>1997-01-01</th>\n",
+       "      <td>360000.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                           exports\n",
-       "COUNTRY              COMMODITY             time                   \n",
-       "United Arab Emirates 0 Food & live animals 1997-01-01    4180000.0\n",
-       "Australia            0 Food & live animals 1997-01-01    4950000.0\n",
-       "Total EU(28)         0 Food & live animals 1997-01-01  385020000.0\n",
-       "Belgium              0 Food & live animals 1997-01-01   22550000.0\n",
-       "Canada               0 Food & live animals 1997-01-01    8180000.0"
+       "                                                    exports\n",
+       "COUNTRY   COMMODITY                   time                 \n",
+       "Australia 0 Food & live animals       1997-01-01  4950000.0\n",
+       "          00 Live animals             1997-01-01  1130000.0\n",
+       "          01 Meat & meat preparations 1997-01-01        0.0\n",
+       "          02 Dairy products & eggs    1997-01-01   140000.0\n",
+       "          03 Fish & shellfish         1997-01-01   360000.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -536,41 +696,41 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th rowspan=\"5\" valign=\"top\">Whole world</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Total</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">Total (ex. metals)</th>\n",
        "      <th>2020-11-01</th>\n",
-       "      <td>2.813900e+10</td>\n",
+       "      <td>2.780700e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020-12-01</th>\n",
-       "      <td>2.786400e+10</td>\n",
+       "      <td>2.775200e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-01-01</th>\n",
-       "      <td>2.016500e+10</td>\n",
+       "      <td>1.967100e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-02-01</th>\n",
-       "      <td>2.396400e+10</td>\n",
+       "      <td>2.382700e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-03-01</th>\n",
-       "      <td>2.900800e+10</td>\n",
+       "      <td>2.884300e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                       exports\n",
-       "COUNTRY     COMMODITY time                    \n",
-       "Whole world Total     2020-11-01  2.813900e+10\n",
-       "                      2020-12-01  2.786400e+10\n",
-       "                      2021-01-01  2.016500e+10\n",
-       "                      2021-02-01  2.396400e+10\n",
-       "                      2021-03-01  2.900800e+10"
+       "                                                exports\n",
+       "COUNTRY     COMMODITY          time                    \n",
+       "Whole world Total (ex. metals) 2020-11-01  2.780700e+10\n",
+       "                               2020-12-01  2.775200e+10\n",
+       "                               2021-01-01  1.967100e+10\n",
+       "                               2021-02-01  2.382700e+10\n",
+       "                               2021-03-01  2.884300e+10"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
